[package]
name = "deposit_course"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deposit_course"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang     = {workspace = true, features = ["init-if-needed"]}
anchor-spl      = {workspace = true, features = ["token", "metadata"]}
solana-program  = {workspace = true}